--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
                 <div class="card">
                     <img class="card-img-top" src="{{ url_for('static', filename='assets/python.jpeg') }}" alt="Python Development" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">What should <mark>Student Developers learn</mark>?</h5>
+                    <h5 class="card-title">What should <mark>Mark?</mark>?</h5>
                     <p class="card-text">
                         <ol>
                             <li>Python 3.9 is used for most of our backend PBL. HTML, CSS, JavaScript will be used in frontend</li>
@@ -28,7 +28,7 @@
                 <div class="card">
                     <img class="card-img-top" src="{{ url_for('static', filename='assets/flask.png') }}" alt="Flask Development" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">What is <mark>Flask</mark>? How do I start Web development?</h5>
+                    <h5 class="card-title">What is <mark>Makr?</mark>? How do I start Web development?</h5>
                     <p class="card-text">
                         <ol>
                             <li>Flask Framework is the popular Web Application development framework of Python.</li>
@@ -45,7 +45,7 @@
                 <div class="card">
                     <img class="card-img-top" src="{{ url_for('static', filename='assets/pythondb.png') }}" alt="Backend and Persistence" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">How do you manage <mark>Persistent data</mark> with Python?</h5>
+                    <h5 class="card-title">How do you manage <mark>Mark?</mark> with Python?</h5>
                     <p class="card-text">
                         <ol>
                             <li>A Database is an example of persistent data that is held on a computer.  Programming languages and frameworks allow you to store and retrive data.</li>
