--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                             <li>Jinja2 is a server-side Python like template engine, supports HTML5 web development, and provides full integration with Flask.</li>
                         </ol>
                     </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <a href="#" class="btn btn-primary">Go shere</a>
                     </div>
                 </div>
             </div>
