--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,8 @@
 {% extends "layouts/base.html" %}
 {% set project = "About" %}
+
 {% block body %}
-<p>bello</p>
+    <div class="px-5 py-5 mx-auto">
+        <p class="text-primary">helo</p>
+    </div>
 {% endblock %}
