--- a/templates/about.html
+++ b/templates/about.html
@@ -3,6 +3,6 @@
 
 {% block body %}
     <div class="px-5 py-5 mx-auto">
-        <p class="text-primary">helo</p>
+        <h1 class="text-primary">helo</h1>
     </div>
 {% endblock %}
