--- a/templates/infographic.html
+++ b/templates/infographic.html
@@ -3,6 +3,76 @@
 
 {% block body %}
     <div class="px-5 py-5 mx-auto">
-        <p class="text-secondary">hello</p>
+        <h1 style="text-align:center;">¿cuánto agua usa?</h1>
+        <p class="text-secondary">¿Sabes cuánto agua usas todos días? Todos personas usan agua todos días, pero hay mucho agua desperdicia.</p>
+        <div class="row">
+            <div class="col-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img class="card-img-top" src="{{ url_for('static', filename='assets/shower.jpg') }}" height="300">
+                        <p class="card-text">El promedio que se usa para ducharse en 15 minutos es 129 litros (o 34 galones)</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img class="card-img-top" src="{{ url_for('static', filename='assets/pantsfactory.jpg') }}" height="300">
+                        <p class="card-text">Gasta 10.000 litros de agua (o 2.640) fabricar un pantalón</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img class="card-img-top" src="{{ url_for('static', filename='assets/showerwait.jpg') }}" height="300">
+                        <p class="card-text">Desperdician 6 litros de agua (o 1,5 galones) esperando el agua caliente en el baño</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img class="card-img-top" src="{{ url_for('static', filename='assets/brush.jpg') }}" height="300">
+                        <p class="card-text">Cuando se lavan los dientes, desperdicia 7 litros de agua (o 1,8 galones)</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img class="card-img-top" src="{{ url_for('static', filename='assets/washhands.jpg') }}" height="300">
+                        <p class="card-text">Cuando se lavan las manos, se desperdician 5 litros de agua (o 1,3 galones) cada minuto que el agua corre</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img class="card-img-top" src="{{ url_for('static', filename='assets/meat.jpg') }}" height="300">
+                        <p class="card-text">Necesita 6800 litros de agua (o 1800 galones) producir una libra de carne</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <al>
+            <li>¿Cierto o Falso? Usan diez mil fabricar un pantalón</li>
+            <li>¿Cierto o Falso? Cuando se cepilla los dientes, desperdicia 1,8 litros de agua</li>
+            <li>¿Cierto o Falso? Necesita un mil galones de agua producir una libra de carne</li>
+        </al>
+        <ol>
+            <li>¿Piensa que nosotros desperdecia mucho agua?</li>
+            <li>¿Piensa que usa mas o menos que la estadística</li>
+        </ol>
+        <div class="col-4">
+            <div class="card" style="text-align:center;"></div>
+        </div>
+        <p class="text-secondary">Por AJ Ruiz</p>
     </div>
+{% endblock %}
+
+{% block background %}
+    <body style="background-color:cornflowerblue"></body>
 {% endblock %}
