--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -14,6 +14,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('stub') }}>Stub</a>
             <a class="nav-link" href={{ url_for('about') }}>About</a>
             <a class="nav-link" href={{ url_for('infographic') }}>Infographic</a>
+            <a class="nav-link" href={{ url_for('chart') }}>Chart</a>
         </div>
     </div>
     <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
