--- a/templates/chart.html
+++ b/templates/chart.html
@@ -16,10 +16,7 @@
         }
     
         tr:nth-child(even) {
-          background-color: blue;
-        }
-        tr:nth-child(odd) {
-            background-color: red
+          background-color: #dddddd;
         }
     </style>
     <div class="px-5 py-5 mx-auto">
