--- a/templates/stub.html
+++ b/templates/stub.html
@@ -23,7 +23,7 @@
             <button type="button" onclick="myFunction()">Try it</button>
             <button id="men" onclick="this.innerHTML=Date()" style="visibility:hidden">H</button>
             <button onclick="this.innerHTML=Date()">H</button>
-            <input type="button"><br><br>
+            <input type="button">
         </body>
     </div>
 {% endblock %}
